# nqd_audiomentations

./: pyproject.toml  requirements.txt  setup.py
nqd_audiomentations/: __init__.py  augmentations.py  legacy.py  rir_sim.py
